--- a/configure.ac
+++ b/configure.ac
@@ -66,9 +66,6 @@ AX_LIBCDATA_CHECK_ENABLE
 dnl Check for enabling libclocale for cross-platform C locale functions
 AX_LIBCLOCALE_CHECK_ENABLE
 
-dnl Check for enabling libcmulti for cross-platform C multi processing/threading functions
-AX_LIBCMULTI_CHECK_ENABLE
-
 dnl Check for enabling libcnotify for cross-platform C notification functions
 AX_LIBCNOTIFY_CHECK_ENABLE
 
@@ -138,7 +135,7 @@ CFLAGS="$CFLAGS -Wall";
 
 dnl Check if requires and build requires should be set in spec file
 AS_IF(
- [test "x$ac_cv_libcstring" = xyes || test "x$ac_cv_libcerror" = xyes || test "x$ac_cv_libcdata" = xyes ||  test "x$ac_cv_libclocale" = xyes || test "x$ac_cv_libcmulti" = xyes || test "x$ac_cv_libcnotify" = xyes || test "x$ac_cv_libcsplit" = xyes || test "x$ac_cv_libuna" = xyes || test "x$ac_cv_libcfile" = xyes || test "x$ac_cv_libcpath" = xyes || test "x$ac_ac_libbfio" = xyes || test "x$ac_ac_libfdatetime" = xyes || test "x$ac_ac_libfguid" = xyes],
+ [test "x$ac_cv_libcstring" = xyes || test "x$ac_cv_libcerror" = xyes || test "x$ac_cv_libcdata" = xyes ||  test "x$ac_cv_libclocale" = xyes || test "x$ac_cv_libcnotify" = xyes || test "x$ac_cv_libcsplit" = xyes || test "x$ac_cv_libuna" = xyes || test "x$ac_cv_libcfile" = xyes || test "x$ac_cv_libcpath" = xyes || test "x$ac_ac_libbfio" = xyes || test "x$ac_ac_libfdatetime" = xyes || test "x$ac_ac_libfguid" = xyes],
  [AC_SUBST(
   [libvshadow_spec_requires],
   [Requires:])
@@ -177,7 +174,6 @@ AC_CONFIG_FILES([libcstring/Makefile])
 AC_CONFIG_FILES([libcerror/Makefile])
 AC_CONFIG_FILES([libcdata/Makefile])
 AC_CONFIG_FILES([libclocale/Makefile])
-AC_CONFIG_FILES([libcmulti/Makefile])
 AC_CONFIG_FILES([libcnotify/Makefile])
 AC_CONFIG_FILES([libcsplit/Makefile])
 AC_CONFIG_FILES([libuna/Makefile])
@@ -228,7 +224,6 @@ Building:
    libcerror support:                            $ac_cv_libcerror
    libcdata support:                             $ac_cv_libcdata
    libclocale support:                           $ac_cv_libclocale
-   libcmulti support:                            $ac_cv_libcmulti
    libcnotify support:                           $ac_cv_libcnotify
    libcsplit support:                            $ac_cv_libcsplit
    libuna support:                               $ac_cv_libuna
