--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Files to ignore by git
 #
-# Version: 20130103
+# Version: 20130503
 
 # Generic auto-generated build files
 *~
@@ -19,6 +19,7 @@
 .libs
 Makefile
 Makefile.in
+stamp-h1
 
 # Specific auto-generated build files
 /ABOUT-NLS
@@ -88,7 +89,6 @@ Makefile.in
 /libvshadow.pc
 /libvshadow.spec
 /common/config.h
-/common/stamp-h1
 /common/types.h
 /dpkg/changelog
 /dpkg/copyright
