--- a/libvshadow.pc.in
+++ b/libvshadow.pc.in
@@ -7,6 +7,6 @@ Name: libvshadow
 Description: Library to access the Windows NT Volume Shadow Snapshot (VSS) format
 Version: @VERSION@
 Libs: -L${libdir} -lvshadow
-Libs.private: @ax_libbfio_pc_libs_private@ @ax_libcdata_pc_libs_private@ @ax_libcerror_pc_libs_private@ @ax_libcfile_pc_libs_private@ @ax_libclocale_pc_libs_private@ @ax_libcnotify_pc_libs_private@ @ax_libcpath_pc_libs_private@ @ax_libcsplit_pc_libs_private@ @ax_libcstring_pc_libs_private@ @ax_libfdatetime_pc_libs_private@ @ax_libfguis_pc_libs_private@ @ax_libuna_pc_libs_private@
+Libs.private: @ax_libbfio_pc_libs_private@ @ax_libcdata_pc_libs_private@ @ax_libcerror_pc_libs_private@ @ax_libcfile_pc_libs_private@ @ax_libclocale_pc_libs_private@ @ax_libcnotify_pc_libs_private@ @ax_libcpath_pc_libs_private@ @ax_libcsplit_pc_libs_private@ @ax_libcstring_pc_libs_private@ @ax_libcthreads_pc_libs_private@ @ax_libfdatetime_pc_libs_private@ @ax_libfguis_pc_libs_private@ @ax_libuna_pc_libs_private@ @ax_pthread_pc_libs_private@
 Cflags: -I${includedir}
 
