Worked on multi-threading support

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Files to ignore by git
 #
-# Version: 20130503
+# Version: 20130507
 
 # Generic auto-generated build files
 *~
@@ -17,6 +17,7 @@
 *.Tpo
 .deps
 .libs
+INSTALL
 Makefile
 Makefile.in
 stamp-h1
@@ -89,6 +90,7 @@ stamp-h1
 /libvshadow.pc
 /libvshadow.spec
 /common/config.h
+/common/config.h.in
 /common/types.h
 /dpkg/changelog
 /dpkg/copyright
