Small fix in msvscpp files.

--- a/msvscpp/libcthreads/libcthreads.vcproj
+++ b/msvscpp/libcthreads/libcthreads.vcproj
@@ -58,7 +58,7 @@
 			/>
 			<Tool
 				Name="VCLibrarianTool"
-				OutputFile="$(OutDir)\libthreads.lib"
+				OutputFile="$(OutDir)\libcthreads.lib"
 				ModuleDefinitionFile=""
 				IgnoreAllDefaultLibraries="false"
 			/>
@@ -124,7 +124,7 @@
 			/>
 			<Tool
 				Name="VCLibrarianTool"
-				OutputFile="$(OutDir)\libthreads.lib"
+				OutputFile="$(OutDir)\libcthreads.lib"
 				ModuleDefinitionFile=""
 				IgnoreAllDefaultLibraries="false"
 			/>
