--- a/msvscpp/libcthreads/libcthreads.vcproj
+++ b/msvscpp/libcthreads/libcthreads.vcproj
@@ -154,6 +154,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath="..\..\libcthreads\libcthreads_condition.c"
+				>
+			</File>
+			<File
 				RelativePath="..\..\libcthreads\libcthreads_error.c"
 				>
 			</File>
@@ -162,7 +166,19 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\libcthreads\libcthreads_mutex.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\libcthreads\libcthreads_queue.c"
+				>
+			</File>
+			<File
 				RelativePath="..\..\libcthreads\libcthreads_read_write_lock.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\libcthreads\libcthreads_repeating_thread.c"
 				>
 			</File>
 			<File
@@ -173,12 +189,24 @@
 				RelativePath="..\..\libcthreads\libcthreads_thread.c"
 				>
 			</File>
+			<File
+				RelativePath="..\..\libcthreads\libcthreads_thread_attributes.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\libcthreads\libcthreads_thread_pool.c"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath="..\..\libcthreads\libcthreads_condition.h"
+				>
+			</File>
 			<File
 				RelativePath="..\..\libcthreads\libcthreads_definitions.h"
 				>
@@ -204,7 +232,19 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\libcthreads\libcthreads_mutex.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\libcthreads\libcthreads_queue.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\libcthreads\libcthreads_read_write_lock.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\libcthreads\libcthreads_repeating_thread.h"
 				>
 			</File>
 			<File
@@ -217,6 +257,10 @@
 			</File>
 			<File
 				RelativePath="..\..\libcthreads\libcthreads_thread_attributes.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\libcthreads\libcthreads_thread_pool.h"
 				>
 			</File>
 			<File
