--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Files to ignore by git
 #
-# Version: 20130831
+# Version: 20130922
 
 # Generic auto-generated build files
 *~
@@ -110,6 +110,7 @@ stamp-h1
 /macosx/libvshadow.pmdoc/04share.xml
 /macosx/libvshadow.pmdoc/05python.xml
 /macosx/libvshadow.pmdoc/index.xml
+/pyvshadow/setup.py
 /tests/input
 /tests/tmp
 /tests/vshadow_test_open_close
