--- a/libvshadow.spec.in
+++ b/libvshadow.spec.in
@@ -31,13 +31,13 @@ Requires: libvshadow = %{version}-%{release} @ax_libcsystem_spec_requires@ @ax_l
 Several tools for reading Windows NT Volume Shadow Snapshots (VSS)
 
 %package python
-Summary: Python binding for libvshadow
+Summary: Python bindings for libvshadow
 Group: System Environment/Libraries
 Requires: libvshadow = %{version}-%{release} python
 BuildRequires: python-devel
 
 %description python
-Python binding for libvshadow
+Python bindings for libvshadow
 
 %prep
 %setup -q
