--- a/pyvshadow/setup.py.in
+++ b/pyvshadow/setup.py.in
@@ -44,6 +44,7 @@ DIRECTORY_NAMES = [
 	"libcfile",
 	"libcpath",
 	"libbfio",
+	"libfguid",
 ]
 
 INCLUDE_DIRS = []
@@ -61,6 +62,7 @@ LIBRARY_NAMES = [
 	"libcfile",
 	"libcpath",
 	"libbfio",
+	"libfguid",
 	"%s" % (LIBRARY_NAME),
 ]
 
@@ -79,6 +81,7 @@ if platform.system() == "Windows":
 		("HAVE_LOCAL_LIBCFILE", ""),
 		("HAVE_LOCAL_LIBCPATH", ""),
 		("HAVE_LOCAL_LIBBFIO", ""),
+		("HAVE_LOCAL_LIBFGUID", ""),
 		("%s_DLL_IMPORT" % (LIBRARY_NAME.upper()), ""),
 	]
 	for library_name in LIBRARY_NAMES:
