--- a/libvshadow-wiki.ini
+++ b/libvshadow-wiki.ini
@@ -20,17 +20,18 @@ names: ["vshadowinfo", "vshadowmount"]
 
 [cygwin]
 build_dependencies: []
-dll_dependencies: []
+dll_dependencies: [
+    "*TODO describe dependencies*"]
 dll_filename: "cygvshadow-0.dll"
 
 [gcc]
 build_dependencies: []
-static_build_dependencies: [
-    "fuse (optional, can be disabled by --with-libfuse=no)"]
+static_build_dependencies: []
 
 [mingw]
 build_dependencies: []
-dll_dependencies: []
+dll_dependencies: [
+    "*TODO describe dependencies*"]
 dll_filename: "libvshadow-1.dll"
 
 [msvscpp]
@@ -48,12 +49,13 @@ build_dependencies: []
 [mount_tool]
 missing_backend_error: "No sub system to mount VSS volume."
 mount_point: "/mnt/vssvolume/"
-mounted_description: "a device file that provides the RAW storage media data contained in the VSS volume"
+mounted_description: "a device file that provides the RAW volume data contained in the VSS volume"
 mounted_dokan: "X:\\VSS1"
 mounted_fuse: "/mnt/vssvolume/vss1"
 source: "image.raw"
 source_description: "a VSS volume"
 source_description_long: "a Volume Service Snapshot (VSS) volume"
+source_type: "volume"
 supported_backends: [
     "Dokan library",
     "fuse",
