Worked on Python binding and setup.py

--- a/msvscpp/pyvshadow/pyvshadow.vcproj
+++ b/msvscpp/pyvshadow/pyvshadow.vcproj
@@ -193,6 +193,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\pyvshadow\pyvshadow_block_flags.c"
+				>
+			</File>
+			<File
 				RelativePath="..\..\pyvshadow\pyvshadow_blocks.c"
 				>
 			</File>
@@ -240,6 +244,10 @@
 			</File>
 			<File
 				RelativePath="..\..\pyvshadow\pyvshadow_block.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\pyvshadow\pyvshadow_block_flags.h"
 				>
 			</File>
 			<File
