--- a/configure.ac
+++ b/configure.ac
@@ -2,7 +2,7 @@ AC_PREREQ( 2.59 )
 
 AC_INIT(
  [libvshadow],
- [20140325],
+ [20140731],
  [joachim.metz@gmail.com])
 
 AC_CONFIG_SRCDIR(
@@ -121,15 +121,36 @@ AX_COMMON_CHECK_ENABLE_DEBUG_OUTPUT
 dnl Check if libevt python bindings (pyvshadow) should be build
 AX_PYTHON_CHECK_ENABLE
 
-dnl Check if DLL support is needed in vshadowtools
+dnl Headers included in various places
+AC_CHECK_HEADERS([stdarg.h varargs.h])
+
 AS_IF(
- [test "x$enable_shared" = xyes && test "x$ac_cv_enable_static_executables" = xno],
+ [test "x$ac_cv_header_stdarg_h" != xyes && test "x$ac_cv_header_varargs_h" != xyes],
+ [AC_MSG_FAILURE(
+  [Missing headers: stdarg.h and varargs.h],
+  [1])
+ ])
+
+dnl Check if DLL support is needed
+AS_IF(
+ [test "x$enable_shared" = xyes],
  [AS_CASE(
   [$host],
   [*cygwin* | *mingw*],
-  [AC_SUBST(
-   [LIBVSHADOW_DLL_IMPORT],
-   ["-DLIBVSHADOW_DLL_IMPORT"])
+  [AC_DEFINE(
+   [HAVE_DLLMAIN],
+   [1],
+   [Define to 1 to enable the DllMain function.])
+  AC_SUBST(
+   [HAVE_DLLMAIN],
+   [1])
+
+  AS_IF(
+   [test "x$ac_cv_enable_static_executables" = xno],
+   [AC_SUBST(
+    [LIBVSHADOW_DLL_IMPORT],
+    ["-DLIBVSHADOW_DLL_IMPORT"])
+   ])
   ])
  ])
 
@@ -194,7 +215,6 @@ AC_CONFIG_FILES([po/Makefile.in])
 AC_CONFIG_FILES([po/Makevars])
 AC_CONFIG_FILES([manuals/Makefile])
 AC_CONFIG_FILES([tests/Makefile])
-AC_CONFIG_FILES([macosx/Makefile])
 AC_CONFIG_FILES([msvscpp/Makefile])
 dnl Have configure make the include files
 AC_CONFIG_FILES([include/libvshadow.h])
@@ -207,13 +227,6 @@ AC_CONFIG_FILES([common/types.h])
 AC_CONFIG_FILES([dpkg/changelog])
 AC_CONFIG_FILES([dpkg/copyright])
 AC_CONFIG_FILES([libvshadow/libvshadow.rc])
-AC_CONFIG_FILES([macosx/libvshadow.pmdoc/01bin.xml])
-AC_CONFIG_FILES([macosx/libvshadow.pmdoc/02include.xml])
-AC_CONFIG_FILES([macosx/libvshadow.pmdoc/03lib.xml])
-AC_CONFIG_FILES([macosx/libvshadow.pmdoc/04share.xml])
-AC_CONFIG_FILES([macosx/libvshadow.pmdoc/05python.xml])
-AC_CONFIG_FILES([macosx/libvshadow.pmdoc/index.xml])
-AC_CONFIG_FILES([macosx/Introduction.rtf])
 AC_CONFIG_FILES([pyvshadow/setup.py])
 AC_CONFIG_FILES([libvshadow.pc])
 AC_CONFIG_FILES([libvshadow.spec])
