--- a/dpkg/rules
+++ b/dpkg/rules
@@ -7,82 +7,90 @@
 # This has to be exported to make some magic below work.
 export DH_OPTIONS
 
-PYTHON_PACKAGE_DIR=$(shell python -c "import distutils.sysconfig;print distutils.sysconfig.get_python_lib(True) ")
-
-
 %:
 	dh  $@
 
-install_libvshadow:
-	# Set up libvshadow package directories and files
-	mkdir -p debian/libvshadow/usr/lib
-	install -p -m755 debian/tmp/usr/lib/lib*.so.*.*.* debian/libvshadow/usr/lib
-
-install_libvshadow_dev:
-	# Set up libvshadow-dev package directories and files
-	mkdir -p debian/libvshadow-dev/usr/include
-	mkdir -p debian/libvshadow-dev/usr/include/libvshadow
-	mkdir -p debian/libvshadow-dev/usr/lib
-	mkdir -p debian/libvshadow-dev/usr/lib/pkgconfig
-	mkdir -p debian/libvshadow-dev/usr/share/man/man3
-	install -p -m755 debian/tmp/usr/include/*.h debian/libvshadow-dev/usr/include
-	install -p -m755 debian/tmp/usr/include/libvshadow/*.h debian/libvshadow-dev/usr/include/libvshadow
-	install -p -m755 debian/tmp/usr/lib/*.la debian/libvshadow-dev/usr/lib
-	install -p -m755 debian/tmp/usr/lib/lib*.a debian/libvshadow-dev/usr/lib
-	install -p -m755 debian/tmp/usr/lib/lib*.so debian/libvshadow-dev/usr/lib
-	install -p -m755 debian/tmp/usr/lib/pkgconfig/* debian/libvshadow-dev/usr/lib/pkgconfig
-	install -p -m755 debian/tmp/usr/share/man/man3/* debian/libvshadow-dev/usr/share/man/man3
-
-install_libvshadow_tools:
-	# Set up libvshadow-tools package directories and files
-	mkdir -p debian/libvshadow-tools/usr/bin
-	mkdir -p debian/libvshadow-tools/usr/share/man/man1
-	install -p -m755 debian/tmp/usr/bin/* debian/libvshadow-tools/usr/bin
-	install -p -m755 debian/tmp/usr/share/man/man1/* debian/libvshadow-tools/usr/share/man/man1
-
-install_libvshadow_python:
-	# Set up libvshadow-python package directories and files
-	mkdir -p debian/libvshadow-python/$(PYTHON_PACKAGE_DIR)
-	install -p -m775 debian/tmp$(PYTHON_PACKAGE_DIR)/pyvshadow.* debian/libvshadow-python$(PYTHON_PACKAGE_DIR)
-
+.PHONY: override_dh_auto_configure
 override_dh_auto_configure:
-	dh_auto_configure -- --enable-python
+	dh_auto_configure -- --enable-python CFLAGS="-g"
 
+.PHONY: override_dh_auto_test
 override_dh_auto_test:
 
-override_dh_installinit: install_libvshadow install_libvshadow_dev install_libvshadow_tools install_libvshadow_python
+.PHONY: override_dh_install
+override_dh_install:
+	# Create the libvshadow package.
+	dh_install "debian/tmp/usr/lib/lib*.so.*.*.*" -p libvshadow
+	# Create the libvshadow-dev package.
+	dh_install "debian/tmp/usr/include/*.h" -p libvshadow-dev
+	dh_install "debian/tmp/usr/include/lib*/*.h" -p libvshadow-dev
+	dh_install "debian/tmp/usr/lib/*.a" -p libvshadow-dev
+	dh_install "debian/tmp/usr/lib/*.la" -p libvshadow-dev
+	dh_install "debian/tmp/usr/lib/*.so" -p libvshadow-dev
+	dh_install "debian/tmp/usr/lib/pkgconfig/*" -p libvshadow-dev
+	dh_install "debian/tmp/usr/share/man/man3/*" -p libvshadow-dev
+	# Create the libvshadow-tools package.
+	dh_install "debian/tmp/usr/bin/*" -p libvshadow-tools
+	dh_install "debian/tmp/usr/share/man/man1/*" -p libvshadow-tools
+	# Create the libvshadow-python package.
+	dh_install -X"*_d.so" "debian/tmp/usr/lib/python*/*" -p libvshadow-python
+	# The libvshadow-dbg and libvshadow-python-dbg packages are created by dh_strip.
+	dh_install
 
+.PHONY: override_dh_installmenu
 override_dh_installmenu:
 
+.PHONY: override_dh_installmime
 override_dh_installmime:
 
+.PHONY: override_dh_installmodules
 override_dh_installmodules:
 
+.PHONY: override_dh_installlogcheck
 override_dh_installlogcheck:
 
+.PHONY: override_dh_installlogrotate
 override_dh_installlogrotate:
 
+.PHONY: override_dh_installpam
 override_dh_installpam:
 
+.PHONY: override_dh_installppp
 override_dh_installppp:
 
+.PHONY: override_dh_installudev
 override_dh_installudev:
 
+.PHONY: override_dh_installwm
 override_dh_installwm:
 
+.PHONY: override_dh_installxfonts
 override_dh_installxfonts:
 
+.PHONY: override_dh_gconf
 override_dh_gconf:
 
+.PHONY: override_dh_icons
 override_dh_icons:
 
+.PHONY: override_dh_perl
 override_dh_perl:
 
+.PHONY: override_dh_pysupport
 override_dh_pysupport:
 
+.PHONY: override_dh_strip
+override_dh_strip:
+ifeq (,$(filter nostrip,$(DEB_BUILD_OPTIONS)))
+	dh_strip -plibvshadow --dbg-package=libvshadow-dbg
+	dh_strip -plibvshadow-python --dbg-package=libvshadow-python-dbg
+endif
+
+.PHONY: override_dh_shlibdeps
 override_dh_shlibdeps:
 	dh_shlibdeps -Llibvshadow -l${PWD}/debian/tmp/usr/lib
 
+.PHONY: override_dh_makeshlibs
 override_dh_makeshlibs:
 	dh_makeshlibs -Xlibvshadow-dev
 
