--- a/libvshadow-wiki.ini
+++ b/libvshadow-wiki.ini
@@ -5,7 +5,7 @@ features: [
     "debug_output", "tools", "python",
     "git", "source_package",
     "cygwin", "gcc", "mingw", "msvscpp",
-    "dpkg", "package_maker", "rpm",
+    "dpkg", "rpm",
     "dokan", "fuse"]
 
 [source_package]
@@ -40,8 +40,6 @@ dll_dependencies: []
 
 [dpkg]
 build_dependencies: []
-
-[package_maker]
 
 [rpm]
 build_dependencies: []
