--- a/configure.ac
+++ b/configure.ac
@@ -2,13 +2,13 @@ AC_PREREQ( 2.59 )
 
 AC_INIT(
  [libvshadow],
- [20140928],
+ [20141017],
  [joachim.metz@gmail.com])
 
 AC_CONFIG_SRCDIR(
  [include/libvshadow.h.in])
 
-AM_INIT_AUTOMAKE([gnu 1.6])
+AM_INIT_AUTOMAKE([gnu 1.6 tar-ustar])
 
 AC_CONFIG_MACRO_DIR([m4])
 
