--- a/libvshadow-wiki.ini
+++ b/libvshadow-wiki.ini
@@ -22,10 +22,12 @@ main_object_filename: "image.raw"
 directory: "vshadowtools"
 names: ["vshadowinfo", "vshadowmount"]
 
+[troubleshooting]
+example: "vshadowinfo image.raw"
+
 [cygwin]
 build_dependencies: []
-dll_dependencies: [
-    "*TODO describe dependencies*"]
+dll_dependencies: []
 dll_filename: "cygvshadow-0.dll"
 
 [gcc]
@@ -34,8 +36,7 @@ static_build_dependencies: []
 
 [mingw]
 build_dependencies: []
-dll_dependencies: [
-    "*TODO describe dependencies*"]
+dll_dependencies: []
 dll_filename: "libvshadow-1.dll"
 
 [msvscpp]
