--- a/libvshadow-wiki.ini
+++ b/libvshadow-wiki.ini
@@ -13,6 +13,7 @@ url: "https://googledrive.com/host/0B3fBvzttpiiSZDZXRFVMdnZCeHc/"
 
 [git]
 url: "https://github.com/libyal/libvshadow.git"
+build_dependencies: []
 
 [development]
 main_object: "volume"
