--- a/libvshadow-wiki.ini
+++ b/libvshadow-wiki.ini
@@ -8,8 +8,11 @@ features: [
     "dpkg", "rpm",
     "dokan", "fuse"]
 
-[source_package]
+[documentation]
 url: "https://googledrive.com/host/0B3fBvzttpiiSZDZXRFVMdnZCeHc/"
+
+[source_package]
+url: "https://github.com/libyal/libvshadow/releases"
 
 [git]
 url: "https://github.com/libyal/libvshadow.git"
