--- a/Makefile.am
+++ b/Makefile.am
@@ -45,6 +45,9 @@ GETTEXT_FILES = \
 PKGCONFIG_FILES = \
 	libvshadow.pc.in
 
+SETUP_PY_FILES = \
+	setup.py
+
 SPEC_FILES = \
 	libvshadow.spec \
 	libvshadow.spec.in
@@ -53,6 +56,7 @@ EXTRA_DIST = \
 	$(DPKG_FILES) \
 	$(GETTEXT_FILES) \
 	$(PKGCONFIG_FILES) \
+	$(SETUP_PY_FILES) \
 	$(SPEC_FILES)
 
 MAINTAINERCLEANFILES = \
