--- a/configure.ac
+++ b/configure.ac
@@ -2,7 +2,7 @@ AC_PREREQ( 2.59 )
 
 AC_INIT(
  [libvshadow],
- [20160108],
+ [20160109],
  [joachim.metz@gmail.com])
 
 AC_CONFIG_SRCDIR(
@@ -119,7 +119,10 @@ dnl Check if libvshadow should be build with debug output
 AX_COMMON_CHECK_ENABLE_DEBUG_OUTPUT
 
 dnl Check if libevt python bindings (pyvshadow) should be build
+AX_PYTHON_CHECK_PYPREFIX
 AX_PYTHON_CHECK_ENABLE
+AX_PYTHON2_CHECK_ENABLE
+AX_PYTHON3_CHECK_ENABLE
 
 dnl Headers included in various places
 AC_CHECK_HEADERS([stdarg.h varargs.h])
@@ -211,6 +214,8 @@ AC_CONFIG_FILES([libvshadow/Makefile])
 AC_CONFIG_FILES([libcsystem/Makefile])
 AC_CONFIG_FILES([vshadowtools/Makefile])
 AC_CONFIG_FILES([pyvshadow/Makefile])
+AC_CONFIG_FILES([pyvshadow2/Makefile])
+AC_CONFIG_FILES([pyvshadow3/Makefile])
 AC_CONFIG_FILES([po/Makefile.in])
 AC_CONFIG_FILES([po/Makevars])
 AC_CONFIG_FILES([manuals/Makefile])
@@ -258,6 +263,8 @@ Features:
    Wide character type support:                  $ac_cv_enable_wide_character_type
    vshadowtools are build as static executables: $ac_cv_enable_static_executables
    Python (pyvshadow) support:                   $ac_cv_enable_python
+   Python version 2 (pyvshadow) support:         $ac_cv_enable_python2
+   Python version 3 (pyvshadow) support:         $ac_cv_enable_python3
    Verbose output:                               $ac_cv_enable_verbose_output
    Debug output:                                 $ac_cv_enable_debug_output
 ]);
