--- a/dpkg/control
+++ b/dpkg/control
@@ -2,7 +2,7 @@ Source: libvshadow
 Section: libs
 Priority: extra
 Maintainer: Joachim Metz <joachim.metz@gmail.com>
-Build-Depends: debhelper (>= 7), autotools-dev, libfuse-dev, python-dev
+Build-Depends: debhelper (>= 7), autotools-dev, libfuse-dev, python-dev, python3-dev
 Standards-Version: 3.9.5
 Homepage: https://github.com/libyal/libvshadow/
 
@@ -39,8 +39,8 @@ Section: python
 Architecture: any
 Depends: libvshadow (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
 Suggests: libvshadow-python-dbg
-Description: Python bindings for libvshadow
- Python bindings for libvshadow.
+Description: Python 2 bindings for libvshadow
+ Python 2 bindings for libvshadow.
 
 Package: libvshadow-python-dbg
 Section: debug
@@ -48,4 +48,19 @@ Architecture: any
 Depends: libvshadow-python (= ${binary:Version}), ${misc:Depends}
 Description: Debugging symbols for libvshadow-python
  Debugging symbols for libvshadow-python.
+
+Package: libvshadow-python3
+Section: python
+Architecture: any
+Depends: libvshadow (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
+Suggests: libvshadow-python3-dbg
+Description: Python 3 bindings for libvshadow
+ Python 3 bindings for libvshadow.
+
+Package: libvshadow-python3-dbg
+Section: debug
+Architecture: any
+Depends: libvshadow-python3 (= ${binary:Version}), ${misc:Depends}
+Description: Debugging symbols for libvshadow-python3
+ Debugging symbols for libvshadow-python3.
 
