Changes for deployment.

--- a/libvshadow.ini
+++ b/libvshadow.ini
@@ -1,22 +1,20 @@
-[Project]
+[project]
 name: "libvshadow"
 status: "alpha"
+authors: ["Joachim Metz <joachim.metz@gmail.com>"]
+year_of_creation: "2011"
+documentation_url: "https://googledrive.com/host/0B3fBvzttpiiSZDZXRFVMdnZCeHc/"
+donwload_url: "https://github.com/libyal/libvshadow/releases"
+git_url: "https://github.com/libyal/libvshadow.git"
+build_dependencies: []
 features: [
     "debug_output", "tools", "python",
-    "git", "source_package",
     "cygwin", "gcc", "mingw", "msvscpp",
     "dpkg", "rpm",
     "dokan", "fuse"]
 
-[documentation]
-url: "https://googledrive.com/host/0B3fBvzttpiiSZDZXRFVMdnZCeHc/"
-
-[source_package]
-url: "https://github.com/libyal/libvshadow/releases"
-
-[git]
-url: "https://github.com/libyal/libvshadow.git"
-build_dependencies: []
+[library]
+description: "Library to acess the Windows NT Volume Shadow Snapshot (VSS) format"
 
 [development]
 main_object: "volume"
