--- a/libvshadow.ini
+++ b/libvshadow.ini
@@ -14,7 +14,7 @@ features: [
     "dokan", "fuse"]
 
 [library]
-description: "Library to acess the Windows NT Volume Shadow Snapshot (VSS) format"
+description: "Library to access the Windows NT Volume Shadow Snapshot (VSS) format"
 
 [development]
 main_object: "volume"
