--- a/dpkg/control
+++ b/dpkg/control
@@ -2,7 +2,7 @@ Source: libvshadow
 Section: libs
 Priority: extra
 Maintainer: Joachim Metz <joachim.metz@gmail.com>
-Build-Depends: debhelper (>= 7), autotools-dev, libfuse-dev, python-dev, python3-dev
+Build-Depends: debhelper (>= 7), autotools-dev, libfuse-dev, python-all-dev, python3-all-dev
 Standards-Version: 3.9.5
 Homepage: https://github.com/libyal/libvshadow/
 
