Changes for deployment.

--- a/libvshadow.ini
+++ b/libvshadow.ini
@@ -4,7 +4,7 @@ status: "alpha"
 authors: ["Joachim Metz <joachim.metz@gmail.com>"]
 year_of_creation: "2011"
 documentation_url: "https://googledrive.com/host/0B3fBvzttpiiSZDZXRFVMdnZCeHc/"
-donwload_url: "https://github.com/libyal/libvshadow/releases"
+download_url: "https://github.com/libyal/libvshadow/releases"
 git_url: "https://github.com/libyal/libvshadow.git"
 build_dependencies: []
 features: [
