--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -18,38 +18,42 @@ AM_CPPFLAGS = \
 
 if HAVE_PYTHON_TESTS
 TESTS_PYVSHADOW = \
-	test_pyvshadow_open_close.sh \
-	test_pyvshadow_read.sh \
-	test_pyvshadow_seek.sh
+	test_python_functions.sh
 endif
 
 TESTS = \
-	test_open_close.sh \
-	test_seek.sh \
-	test_read.sh \
+	test_api_functions.sh \
 	test_vshadowinfo.sh \
 	$(TESTS_PYVSHADOW)
 
 check_SCRIPTS = \
+	pyvshadow_test_get_version.py \
 	pyvshadow_test_open_close.py \
 	pyvshadow_test_read.py \
 	pyvshadow_test_seek.py \
-	test_open_close.sh \
-	test_pyvshadow_open_close.sh \
-	test_pyvshadow_read.sh \
-	test_pyvshadow_seek.sh \
-	test_read.sh \
+	test_api_functions.sh \
+	test_python_functions.sh \
 	test_runner.sh \
-	test_seek.sh \
 	test_vshadowinfo.sh
 
 EXTRA_DIST = \
 	$(check_SCRIPTS)
 
 check_PROGRAMS = \
+	vshadow_test_get_version \
 	vshadow_test_open_close \
 	vshadow_test_read \
 	vshadow_test_seek
+
+vshadow_test_get_version_SOURCES = \
+	vshadow_test_get_version.c \
+	vshadow_test_libcstring.h \
+	vshadow_test_libvshadow.h \
+	vshadow_test_unused.h
+
+vshadow_test_get_version_LDADD = \
+	../libvshadow/libvshadow.la \
+	@LIBCSTRING_LIBADD@
 
 vshadow_test_open_close_SOURCES = \
 	vshadow_test_libcerror.h \
