--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
 # Files to ignore by git
 #
-# Version: 20151228
+# Version: 20160507
 
 # Generic auto-generated build files
 *~
 *.a
+*.gcda
+*.gcno
+*.gcov
 *.la
 *.lai
 *.lib
@@ -121,6 +124,7 @@ stamp-h[1-9]
 /vshadowtools/vshadowmount
 /tests/input
 /tests/tmp*
+/tests/vshadow_test_get_version
 /tests/vshadow_test_open_close
 /tests/vshadow_test_read
 /tests/vshadow_test_seek
