--- a/libvshadow.ini
+++ b/libvshadow.ini
@@ -6,23 +6,19 @@ year_of_creation: "2011"
 documentation_url: "https://googledrive.com/host/0B3fBvzttpiiSZDZXRFVMdnZCeHc/"
 download_url: "https://github.com/libyal/libvshadow/releases"
 git_url: "https://github.com/libyal/libvshadow.git"
-build_dependencies: []
-features: [
-    "debug_output", "tools", "python",
-    "cygwin", "gcc", "mingw", "msvscpp",
-    "dpkg", "rpm",
-    "dokan", "fuse"]
+features: ["debug_output"]
 
 [library]
 description: "Library to access the Windows NT Volume Shadow Snapshot (VSS) format"
-
-[development]
-main_object: "volume"
-main_object_filename: "image.raw"
+build_dependencies: []
 
 [tools]
 directory: "vshadowtools"
 names: ["vshadowinfo", "vshadowmount"]
+
+[development]
+main_object: "volume"
+main_object_filename: "image.raw"
 
 [troubleshooting]
 example: "vshadowinfo image.raw"
