--- a/libvshadow.ini
+++ b/libvshadow.ini
@@ -6,7 +6,7 @@ year_of_creation: "2011"
 documentation_url: "https://googledrive.com/host/0B3fBvzttpiiSZDZXRFVMdnZCeHc/"
 download_url: "https://github.com/libyal/libvshadow/releases"
 git_url: "https://github.com/libyal/libvshadow.git"
-features: ["debug_output"]
+features: ["debug_output", "python"]
 
 [library]
 description: "Library to access the Windows NT Volume Shadow Snapshot (VSS) format"
