--- a/configure.ac
+++ b/configure.ac
@@ -2,7 +2,7 @@ AC_PREREQ( 2.59 )
 
 AC_INIT(
  [libvshadow],
- [20160819],
+ [20160905],
  [joachim.metz@gmail.com])
 
 AC_CONFIG_SRCDIR(
@@ -137,6 +137,9 @@ AS_IF(
   [Missing headers: stdarg.h and varargs.h],
   [1])
  ])
+
+dnl Check for test function support
+AX_TESTS_CHECK_LOCAL
 
 dnl Check if DLL support is needed
 AS_IF(
