--- a/msvscpp/Makefile.am
+++ b/msvscpp/Makefile.am
@@ -16,6 +16,7 @@ MSVSCPP_FILES = \
 	libuna/libuna.vcproj \
 	libvshadow/libvshadow.vcproj \
 	pyvshadow/pyvshadow.vcproj \
+	vshadow_test_error/vshadow_test_error.vcproj \
 	vshadow_test_get_version/vshadow_test_get_version.vcproj \
 	vshadow_test_open_close/vshadow_test_open_close.vcproj \
 	vshadow_test_read/vshadow_test_read.vcproj \
@@ -24,17 +25,8 @@ MSVSCPP_FILES = \
 	vshadowmount/vshadowmount.vcproj \
 	libvshadow.sln
 
-SCRIPT_FILES = \
-	scripts/vs2008_x64.sh \
-	scripts/vs2008_x64_sln.sed \
-	scripts/vs2008_x64_vcproj.sed \
-	scripts/vs2010_x64.sh \
-	scripts/vs2010_x64_sln.sed \
-	scripts/vs2010_x64_vcxproj.sed
-
 EXTRA_DIST = \
-	$(MSVSCPP_FILES) \
-	$(SCRIPT_FILES)
+	$(MSVSCPP_FILES)
 
 MAINTAINERCLEANFILES = \
 	Makefile.in
